# gitlab-group-exporter

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: ci.yaml
src/gitlab_group_exporter/: cli.py  settings.py
